// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders Calling without crashing 1`] = `
<body>
  <div>
    <article
      class="rcx-css-acl0j"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-k50kn1 rcx-css-19jf8qg"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-stacked-meatballs rcx-icon rcx-css-dpa92h"
        >
          
        </i>
      </div>
      <header
        class="rcx-box rcx-box--full rcx-css-4vvilp"
      >
        <h3
          class="rcx-box rcx-box--full rcx-css-15wnn68"
        >
          Calling...
        </h3>
        <div
          class="rcx-box rcx-box--full rcx-css-ws1yyr"
        >
          <button
            aria-label="customize"
            class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--square rcx-button--icon rcx-button"
            disabled=""
            label="customize"
            title="Device_settings_not_supported_by_browser"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-customize rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
        </div>
      </header>
      <section
        class="rcx-box rcx-box--full rcx-css-1mjdwp7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-omrq7i"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-1rtu0k9"
          >
            <figure
              class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x20"
            >
              <img
                alt=""
                class="rcx-avatar__element rcx-avatar__element--x20"
                src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBkSEw8UHRofHh0aHBwgJC4nICIsIxwcKDcpLDAxNDQ0Hyc5PTgyPC4zNDL/2wBDAQkJCQwLDBgNDRgyIRwhMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjL/wAARCAAoACgDASIAAhEBAxEB/8QAGwAAAgIDAQAAAAAAAAAAAAAAAAcEBgIDBQj/xAAuEAACAQQAAwcEAQUAAAAAAAABAgMABAUREiExBhMUIkFRYQcWcYGhFTJSgpH/xAAYAQADAQEAAAAAAAAAAAAAAAACAwQBAP/EAB4RAAIBBQEBAQAAAAAAAAAAAAABAgMREiExE0HR/9oADAMBAAIRAxEAPwBuXuIkhBuMe5ib/AHQP49q4L3mLitryTLTSpOiHQI5k/HzXa/qbFOEudVTu1dumWvcTaNCZYZ7vU6g6LxqjOU/24dfs1Ouh9FnkMpd3Reeyx83hAxZZEhkdV9/MBrX71WGPvJcqrJBGveKATtuXXqNU0pu02bTHXD/AGvJAluyxxRd6F4x00o+NdKoVrjbzJdvVe1t5cVLc2ck8qjnohgpPtz2v7G6JtPQ2VJwjlcw+37mchpnK6GtIuv5NFWeTsLNPvxWTvpfjvOEfwKKzEVkSct2vscS/BIzSN0YRkeX81UpPqO8masJETu7OOccY4dswYFQeftv096XV5knuJGdm2T1+agvMXj8jEaHX905QihabvcbuS7X566mLWLwSY8PuRnk/u4eZ0deTl71Ef6hY+0yM88TzeNZY4luYwpVYyduOfrvhPTnr0pXSX9y5mCsyJMdyxxvwq599em+taItqCSNc90ChvZRUruUcT0JiO18Elpk7t8v41LWzacxkBSuvjQ/FFJayjDWrCTepAQ2vUH0oo/Jk3ovpwJJeVCP5CN+lFFaaMqy+nAyuChvrTI2kN9JAsi2ZOy4IBHMnkSCP+iqBexSWdxLazoUljJVlPUH2oorkV10pRc7b1zXb/hZOzuJvM86QWEXeELxOzHSIPcmiiiunVlF2RNTpRkrs//Z"
              />
            </figure>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-css-1tbw8nv"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1k5oh73"
            >
              John Doe
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1c8uhnw"
            >
              1234567890
            </div>
          </div>
        </div>
      </section>
      <footer
        class="rcx-box rcx-box--full rcx-css-184ke9m"
      >
        <div
          class="rcx-button-group rcx-button-group--stretch rcx-button-group--align-start"
          role="group"
        >
          <button
            class="rcx-box rcx-box--full rcx-button--medium rcx-button--danger rcx-button rcx-button-group__item rcx-css-t3n91h"
            name="phone"
            type="button"
          >
            <span
              class="rcx-button--content"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-phone-off rcx-icon rcx-css-1hdf9ok"
              >
                
              </i>
              Cancel
            </span>
          </button>
        </div>
      </footer>
    </article>
  </div>
</body>
`;

exports[`renders IncomingCall without crashing 1`] = `
<body>
  <div>
    <article
      class="rcx-css-acl0j"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-k50kn1 rcx-css-19jf8qg"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-stacked-meatballs rcx-icon rcx-css-dpa92h"
        >
          
        </i>
      </div>
      <header
        class="rcx-box rcx-box--full rcx-css-4vvilp"
      >
        <h3
          class="rcx-box rcx-box--full rcx-css-15wnn68"
        >
          Incoming Call...
        </h3>
        <div
          class="rcx-box rcx-box--full rcx-css-ws1yyr"
        >
          <button
            aria-label="customize"
            class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--square rcx-button--icon rcx-button"
            disabled=""
            label="customize"
            title="Device_settings_not_supported_by_browser"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-customize rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
        </div>
      </header>
      <section
        class="rcx-box rcx-box--full rcx-css-1mjdwp7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-omrq7i"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-1rtu0k9"
          >
            <figure
              class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x20"
            >
              <img
                alt=""
                class="rcx-avatar__element rcx-avatar__element--x20"
                src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBkSEw8UHRofHh0aHBwgJC4nICIsIxwcKDcpLDAxNDQ0Hyc5PTgyPC4zNDL/2wBDAQkJCQwLDBgNDRgyIRwhMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjL/wAARCAAoACgDASIAAhEBAxEB/8QAGwAAAgIDAQAAAAAAAAAAAAAAAAcEBgIDBQj/xAAuEAACAQQAAwcEAQUAAAAAAAABAgMABAUREiExBhMUIkFRYQcWcYGhFTJSgpH/xAAYAQADAQEAAAAAAAAAAAAAAAACAwQBAP/EAB4RAAIBBQEBAQAAAAAAAAAAAAABAgMREiExE0HR/9oADAMBAAIRAxEAPwBuXuIkhBuMe5ib/AHQP49q4L3mLitryTLTSpOiHQI5k/HzXa/qbFOEudVTu1dumWvcTaNCZYZ7vU6g6LxqjOU/24dfs1Ouh9FnkMpd3Reeyx83hAxZZEhkdV9/MBrX71WGPvJcqrJBGveKATtuXXqNU0pu02bTHXD/AGvJAluyxxRd6F4x00o+NdKoVrjbzJdvVe1t5cVLc2ck8qjnohgpPtz2v7G6JtPQ2VJwjlcw+37mchpnK6GtIuv5NFWeTsLNPvxWTvpfjvOEfwKKzEVkSct2vscS/BIzSN0YRkeX81UpPqO8masJETu7OOccY4dswYFQeftv096XV5knuJGdm2T1+agvMXj8jEaHX905QihabvcbuS7X566mLWLwSY8PuRnk/u4eZ0deTl71Ef6hY+0yM88TzeNZY4luYwpVYyduOfrvhPTnr0pXSX9y5mCsyJMdyxxvwq599em+taItqCSNc90ChvZRUruUcT0JiO18Elpk7t8v41LWzacxkBSuvjQ/FFJayjDWrCTepAQ2vUH0oo/Jk3ovpwJJeVCP5CN+lFFaaMqy+nAyuChvrTI2kN9JAsi2ZOy4IBHMnkSCP+iqBexSWdxLazoUljJVlPUH2oorkV10pRc7b1zXb/hZOzuJvM86QWEXeELxOzHSIPcmiiiunVlF2RNTpRkrs//Z"
              />
            </figure>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-css-1tbw8nv"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1k5oh73"
            >
              John Doe
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1c8uhnw"
            >
              1234567890
            </div>
          </div>
        </div>
      </section>
      <footer
        class="rcx-box rcx-box--full rcx-css-184ke9m"
      >
        <div
          class="rcx-button-group rcx-button-group--stretch rcx-button-group--align-start"
          role="group"
        >
          <button
            class="rcx-box rcx-box--full rcx-button--medium rcx-button--danger rcx-button rcx-button-group__item rcx-css-t3n91h"
            name="phone"
            type="button"
          >
            <span
              class="rcx-button--content"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-phone-off rcx-icon rcx-css-1hdf9ok"
              >
                
              </i>
              Reject
            </span>
          </button>
          <button
            class="rcx-box rcx-box--full rcx-button--medium rcx-button--success rcx-button rcx-button-group__item rcx-css-t3n91h"
            name="phone"
            type="button"
          >
            <span
              class="rcx-button--content"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-phone rcx-icon rcx-css-1hdf9ok"
              >
                
              </i>
              Accept
            </span>
          </button>
        </div>
      </footer>
    </article>
  </div>
</body>
`;

exports[`renders MediaCallWidgetManualTesting without crashing 1`] = `
<body>
  <div>
    <button
      class="rcx-box rcx-box--full rcx-button rcx-css-1rtu0k9"
      type="button"
    >
      <span
        class="rcx-button--content"
      >
        Toggle widget
      </span>
    </button>
    <button
      class="rcx-box rcx-box--full rcx-button"
      type="button"
    >
      <span
        class="rcx-button--content"
      >
        Receive call
      </span>
    </button>
  </div>
</body>
`;

exports[`renders NewCall without crashing 1`] = `
<body>
  <div>
    <article
      class="rcx-css-acl0j"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-k50kn1 rcx-css-19jf8qg"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-stacked-meatballs rcx-icon rcx-css-dpa92h"
        >
          
        </i>
      </div>
      <header
        class="rcx-box rcx-box--full rcx-css-4vvilp"
      >
        <h3
          class="rcx-box rcx-box--full rcx-css-15wnn68"
        >
          New Call
        </h3>
        <div
          class="rcx-box rcx-box--full rcx-css-ws1yyr"
        >
          <button
            aria-label="close"
            class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button"
            label="close"
            title="close"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
        </div>
      </header>
      <section
        class="rcx-box rcx-box--full rcx-css-1mjdwp7"
      >
        <div
          class="rcx-box rcx-box--full rcx-field rcx-css-toq36"
        >
          <span
            class="rcx-box rcx-box--full rcx-field__row"
          >
            <div
              class="rcx-box rcx-box--full rcx-autocomplete rcx-css-t3n91h"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-6d871f"
                role="group"
              >
                <input
                  aria-labelledby=":r0:"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box rcx-css-trljwa rcx-css-rcil7k"
                  value=""
                />
              </div>
              <div
                class="rcx-box rcx-box--full rcx-autocomplete__addon"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-magnifier rcx-icon rcx-css-6vi44e"
                >
                  
                </i>
              </div>
            </div>
          </span>
          <span
            class="rcx-box rcx-box--full rcx-field__description"
            id=":r0:"
          >
            Enter username or number
          </span>
        </div>
      </section>
      <footer
        class="rcx-box rcx-box--full rcx-css-184ke9m"
      >
        <div
          class="rcx-button-group rcx-button-group--stretch rcx-button-group--align-start"
          role="group"
        >
          <button
            aria-label="dialpad"
            class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button rcx-button-group__item rcx-css-irxdij"
            label="dialpad"
            title="dialpad"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-dialpad rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
          <button
            aria-label="customize"
            class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button"
            disabled=""
            label="customize"
            title="Device_settings_not_supported_by_browser"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-customize rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
          <button
            class="rcx-box rcx-box--full rcx-button--medium rcx-button--success rcx-button rcx-button-group__item rcx-css-t3n91h"
            name="phone"
            type="button"
          >
            <span
              class="rcx-button--content"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-phone rcx-icon rcx-css-1hdf9ok"
              >
                
              </i>
              Call
            </span>
          </button>
        </div>
      </footer>
    </article>
  </div>
</body>
`;

exports[`renders OngoingCall without crashing 1`] = `
<body>
  <div>
    <article
      class="rcx-css-acl0j"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-k50kn1 rcx-css-19jf8qg"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-stacked-meatballs rcx-icon rcx-css-dpa92h"
        >
          
        </i>
      </div>
      <header
        class="rcx-box rcx-box--full rcx-css-4vvilp"
      >
        <h3
          class="rcx-box rcx-box--full rcx-css-15wnn68"
        >
          <time
            datetime="PT0H0M0S"
          >
            00
            :
            00
          </time>
        </h3>
        <div
          class="rcx-box rcx-box--full rcx-css-ws1yyr"
        >
          <button
            aria-label="customize"
            class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--square rcx-button--icon rcx-button"
            disabled=""
            label="customize"
            title="Device_settings_not_supported_by_browser"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-customize rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
        </div>
      </header>
      <section
        class="rcx-box rcx-box--full rcx-css-1mjdwp7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-omrq7i"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-1rtu0k9"
          >
            <figure
              class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x20"
            >
              <img
                alt=""
                class="rcx-avatar__element rcx-avatar__element--x20"
                src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBkSEw8UHRofHh0aHBwgJC4nICIsIxwcKDcpLDAxNDQ0Hyc5PTgyPC4zNDL/2wBDAQkJCQwLDBgNDRgyIRwhMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjL/wAARCAAoACgDASIAAhEBAxEB/8QAGwAAAgIDAQAAAAAAAAAAAAAAAAcEBgIDBQj/xAAuEAACAQQAAwcEAQUAAAAAAAABAgMABAUREiExBhMUIkFRYQcWcYGhFTJSgpH/xAAYAQADAQEAAAAAAAAAAAAAAAACAwQBAP/EAB4RAAIBBQEBAQAAAAAAAAAAAAABAgMREiExE0HR/9oADAMBAAIRAxEAPwBuXuIkhBuMe5ib/AHQP49q4L3mLitryTLTSpOiHQI5k/HzXa/qbFOEudVTu1dumWvcTaNCZYZ7vU6g6LxqjOU/24dfs1Ouh9FnkMpd3Reeyx83hAxZZEhkdV9/MBrX71WGPvJcqrJBGveKATtuXXqNU0pu02bTHXD/AGvJAluyxxRd6F4x00o+NdKoVrjbzJdvVe1t5cVLc2ck8qjnohgpPtz2v7G6JtPQ2VJwjlcw+37mchpnK6GtIuv5NFWeTsLNPvxWTvpfjvOEfwKKzEVkSct2vscS/BIzSN0YRkeX81UpPqO8masJETu7OOccY4dswYFQeftv096XV5knuJGdm2T1+agvMXj8jEaHX905QihabvcbuS7X566mLWLwSY8PuRnk/u4eZ0deTl71Ef6hY+0yM88TzeNZY4luYwpVYyduOfrvhPTnr0pXSX9y5mCsyJMdyxxvwq599em+taItqCSNc90ChvZRUruUcT0JiO18Elpk7t8v41LWzacxkBSuvjQ/FFJayjDWrCTepAQ2vUH0oo/Jk3ovpwJJeVCP5CN+lFFaaMqy+nAyuChvrTI2kN9JAsi2ZOy4IBHMnkSCP+iqBexSWdxLazoUljJVlPUH2oorkV10pRc7b1zXb/hZOzuJvM86QWEXeELxOzHSIPcmiiiunVlF2RNTpRkrs//Z"
              />
            </figure>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-css-1tbw8nv"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1k5oh73"
            >
              John Doe
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1c8uhnw"
            >
              1234567890
            </div>
          </div>
        </div>
      </section>
      <footer
        class="rcx-box rcx-box--full rcx-css-184ke9m"
      >
        <div
          class="rcx-button-group rcx-button-group--align-start rcx-button-group--large"
          role="group"
        >
          <button
            aria-label="dialpad"
            class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
            label="dialpad"
            title="dialpad"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-dialpad rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
          <button
            aria-label="forward"
            class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
            label="forward"
            title="forward"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-arrow-forward rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
          <button
            aria-label="hold"
            class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
            label="hold"
            title="hold"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-pause-shape-unfilled rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
          <button
            aria-label="mute"
            class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
            label="mute"
            title="mute"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-mic rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
          <button
            aria-label="phone"
            class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary-danger rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
            label="phone"
            title="phone"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-phone rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
        </div>
      </footer>
    </article>
  </div>
</body>
`;
